[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/MainMenuButton.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/SoundScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/HowToPlayScene.gd" type="Script" id=4]
[ext_resource path="res://RawResources/Graphics/explanation1.png" type="Texture" id=5]
[ext_resource path="res://Resources/ExplanationTitle.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/ExplanationText.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/ExplanationTextBold.tres" type="DynamicFont" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 7 )
RichTextLabel/fonts/bold_font = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 6 )

[node name="HowToPlayScene" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 0.477
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 2, 2 )
size_flags_stretch_ratio = 0.82
script = ExtResource( 2 )

[node name="SoundScene" parent="." instance=ExtResource( 3 )]

[node name="BackBtn" type="Button" parent="."]
margin_left = 570.0
margin_top = 935.0
margin_right = 1770.0
margin_bottom = 1152.0
rect_scale = Vector2( 0.25, 0.25 )
theme = ExtResource( 1 )
text = "Return"
__meta__ = {
"_editor_description_": ""
}

[node name="NextBtn" type="Button" parent="."]
margin_left = 1050.0
margin_top = 934.0
margin_right = 2250.0
margin_bottom = 1151.0
rect_scale = Vector2( 0.25, 0.25 )
theme = ExtResource( 1 )
text = "Next"
__meta__ = {
"_editor_description_": ""
}

[node name="ExplanationText" type="RichTextLabel" parent="."]
margin_left = 848.0
margin_top = 269.0
margin_right = 8848.0
margin_bottom = 5129.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "At the [b]end of the year[/b], there will be a [b]shopping period[/b].

Here, you can spend your [b]gold[/b] to add new cards to your deck.

Cards purchased this way go to your discard pile, and will be reshuffled into your deck next time it's empty."
text = "At the end of the year, there will be a shopping period.

Here, you can spend your gold to add new cards to your deck.

Cards purchased this way go to your discard pile, and will be reshuffled into your deck next time it's empty."
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="TitleText" type="RichTextLabel" parent="."]
margin_left = 848.0
margin_top = 149.0
margin_right = 8848.0
margin_bottom = 1149.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Welcome to Town!"
text = "Welcome to Town!"
scroll_active = false

[node name="ExplanationImage" type="Sprite" parent="."]
position = Vector2( 536, 496 )
texture = ExtResource( 5 )

[connection signal="mouse_entered" from="BackBtn" to="." method="_on_BackBtn_mouse_entered"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="mouse_entered" from="NextBtn" to="." method="_on_NextBtn_mouse_entered"]
[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
